ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: -ingressName-
  namespace: -ingressNamespace-
spec:
  backend:
    serviceName: -ingressDefaultBackend-
    servicePort: -ingressDefaultBackendservicePort-
  rules:
  - http:
      paths:
      - path: /cloud-portal-services/*
        backend:
          serviceName: wncp-backend-service
          servicePort: 8080
-ingressServicePathsData-
