multi-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wncp-backend
  name: wncp-backend
  namespace: wncp-test-1
spec:
  minReadySeconds: 120
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wncp-backend
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: wncp-backend
    spec:
      containers:
      - image: gcr.io/wn-cloud-275704/cloud-portal-service@sha256:d44480f23dc411a38b65c95e27508a3101c743f2392b2b98455cde237433e730
        imagePullPolicy: IfNotPresent
        name: cloud-portal-service-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wncp-fronend
  name: wncp-fronend
  namespace: wncp-test-1
spec:
  minReadySeconds: 60
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wncp-fronend
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: wncp-fronend
    spec:
      containers:
      - image: gcr.io/wn-cloud-275704/cloud-portal-frontend@sha256:a43821b760dbb883e089f55c12b2a5553f4017bc812f733a1403452402026134
        imagePullPolicy: IfNotPresent
        name: cloud-portal-frontend-sha256-1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: wncp-backend
  name: wncp-backend-service
  namespace: wncp-test-1
spec:
  clusterIP: 10.0.1.2
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32257
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wncp-backend
  sessionAffinity: None
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: wncp-fronend
  name: wncp-fronend-service
  namespace: wncp-test-1
spec:
  clusterIP: 10.0.1.1
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32625
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wncp-fronend
  sessionAffinity: None
  type: NodePort

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wncp-ingress-test-1
  namespace: wncp-test-1
spec:
  backend:
    serviceName: wncp-fronend-service
    servicePort: 8080
  rules:
  - http:
      paths:
      - backend:
          serviceName: wncp-backend-service
          servicePort: 8080
        path: /cloud-portal-services/*
  - {}
